Add icons to navbar

--- a/app/views/famgen/index.html.erb
+++ b/app/views/famgen/index.html.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Famgen</title>
+    <title>Famgen Website</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
