--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,3 +1,5 @@
-<div id="footer">
-   <p id="contactadmin" class="text-center">To request your permissions to be upgraded contact the admin at: <a href="http://lfrohr@gmail.com">lfrohr@gmail.com</p>
+<div id="footer" style = "margin-top: 0em;" >
+	<p class="text-center">...</p>
+   	<p id="contactadmin_en" class="text-center" style = "margin: 0em;">To request your permissions to be upgraded contact the admin at: <a href="http://lfrohr@gmail.com">lfrohr@gmail.com</a></p>
+   	<p id="contactadmin_sp" class="text-center" style = "margin: 0em;">(Para solicitar sus permisos para estar actualizado de contacto del administrador en: <a href="http://lfrohr@gmail.com">lfrohr@gmail.com)</a></p>
 </div>
